# exfo-ctp10-api

./: .gitignore  ASYNC_FIXES_SUMMARY.md  COMPLETE_ASYNC_FIXES.md  INTEGRATION_TEST.md  README.md  TESTING.md  WEBSOCKET_CLEANUP.md  WEBSOCKET_GOLD_STANDARD.md  pyproject.toml  test_async_fix.py
app/: config.py  dependencies.py  factory.py  main.py  manager.py  models.py
app/mocks/: mock_ctp10.py
app/routers/: __init__.py  connection.py  detector.py  measurement.py  rlaser.py  tls.py  websocket.py  websocket_health.py  websocket_v2.py
docs/: DEPLOYMENT.md  TESTING.md  USAGE.md
examples/: README.md  debug_websocket.py  instrument_detector_wavelength.py  instrument_sweep_wavelength.py  quick_test.py  read_tls_config.py  set_tls_cband.py  set_tls_oband.py  test_power_reading.py  test_reference_creation.py  test_reference_creation_dual_channel.py  test_rlaser_config.py  test_snapshot.py  test_tls_sweep.py  test_trace_retrieval.py  websocket_power_monitor.html
tests/: README.md  conftest.py  test_connection.py  test_detector.py  test_measurement.py  test_rlaser.py  test_tls.py  test_websocket.py
tests/mocks/: mock_ctp10.py
